# go-tls

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  gotls.go  gotls_test.go  repositories.bzl  tls.go  tls_test.go
proto/v1/: BUILD.bazel  tls.proto
proto/v1/tls/: empty.go
proto/v1/tlspb/: empty.go
