load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/hazaelsan/go-tls
# gazelle:proto package
# gazelle:proto_group go_package
gazelle(name = "gazelle")

go_library(
    name = "tls",
    srcs = ["tls.go"],
    importpath = "github.com/hazaelsan/ssh-relay/tls",
    deps = ["//proto/v1:tls_go_proto"],
)

go_test(
    name = "tls_test",
    srcs = ["tls_test.go"],
    data = ["//testdata"],
    embed = [":tls"],
    deps = [
        "//proto/v1:tls_go_proto",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
    ],
)
