load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/hazaelsan/go-tls
# gazelle:proto package
# gazelle:proto_group go_package
# gazelle:resolve go github.com/hazaelsan/go-tls/proto/v1/tls //proto/v1:tls_go_proto
# gazelle:resolve proto google/api/field_behavior.proto @googleapis//google/api:field_behavior_proto
# gazelle:resolve proto go google/api/field_behavior.proto @googleapis//google/api:annotations_go_proto
# gazelle:exclude empty.go
gazelle(name = "gazelle")

go_library(
    name = "go-tls",
    srcs = ["tls.go"],
    importpath = "github.com/hazaelsan/go-tls",
    deps = ["//proto/v1:tls_go_proto"],
)

go_test(
    name = "go-tls_test",
    srcs = ["tls_test.go"],
    data = ["testdata"],
    embed = [":go-tls"],
    deps = [
        "//proto/v1:tls_go_proto",
        "@com_github_kylelemons_godebug//pretty",
    ],
)
