load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

# gazelle:proto package
# gazelle:proto_group go_package
# gazelle:resolve proto google/api/field_behavior.proto @com_google_googleapis//google/api:field_behavior_proto
# gazelle:resolve proto go google/api/field_behavior.proto @com_google_googleapis//google/api:annotations_go_proto
# gazelle:exclude **/empty.go
gazelle(name = "gazelle")

go_library(
    name = "gotls",
    srcs = ["gotls.go"],
    importpath = "github.com/hazaelsan/gotls",
    deps = ["//proto/v1:tls_go_proto"],
)

go_test(
    name = "gotls_test",
    srcs = ["gotls_test.go"],
    data = ["testdata"],
    embed = [":gotls"],
    deps = [
        "//proto/v1:tls_go_proto",
        "@com_github_kylelemons_godebug//pretty",
    ],
)
