module(name = "go_tls")

bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "30.0-rc2", repo_name = "com_google_protobuf")
bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33", repo_name = "com_google_googleapis")
bazel_dep(name = "googleapis-go", version = "1.0.0")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_kylelemons_godebug",
)
