load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "tls_proto",
    srcs = ["tls.proto"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "tls_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/proto/v1/tls_go_proto",
    proto = ":tls_proto",
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)
