load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "tls_proto",
    srcs = ["tls.proto"],
    deps = ["@com_google_googleapis//google/api:field_behavior_proto"],
)

go_proto_library(
    name = "tls_go_proto",
    importpath = "github.com/hazaelsan/go-tls/proto/v1/tls",
    proto = ":tls_proto",
    deps = ["@com_google_googleapis//google/api:annotations_go_proto"],
)
